--- a/web/docker/web/Dockerfile
+++ b/web/docker/web/Dockerfile
@@ -1,24 +1,22 @@
-# Base image
 FROM nginx
-# Install dependencies
+
 RUN apt-get update -qq && apt-get -y install apache2-utils
-# establish where Nginx should look for files
+
 ENV RAILS_ROOT /var/www/alegreme
-# Set our working directory inside the image
+
 WORKDIR $RAILS_ROOT
-# create log directory
-RUN mkdir log
-# copy over static assets
+
+RUN mkdir -p log
+RUN mkdir -p cache/nginx-rails
+
 COPY public public/
-# Copy Nginx config template
+
 COPY docker/web/nginx.conf /tmp/docker.nginx
 
 RUN mkdir -p .well-known
 COPY docker/web/.well-known .well-known/
 
-# substitute variable references in the Nginx config template for real values from the environment
-# put the final config in its place
 RUN envsubst '$RAILS_ROOT' < /tmp/docker.nginx > /etc/nginx/conf.d/default.conf
 EXPOSE 80
-# Use the "exec" form of CMD so Nginx shuts down gracefully on SIGTERM (i.e. `docker stop`)
+
 CMD [ "nginx", "-g", "daemon off;" ]
