--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,3 +1,5 @@
+proxy_cache_path $RAILS_ROOT/cache/nginx-rails levels= keys_zone=rails_cache:10m max_size=10g use_temp_path=off inactive=120m;
+
 upstream rails_app {
     server app:3000;
 }
@@ -24,25 +26,29 @@ server {
         root /var/www/certbot;
     }
     location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|packs)/ {
+        if ( $http_if_none_match = $uri ) {
+          return 304;
+        }
         root $RAILS_ROOT/public;
         try_files $uri @rails;
         access_log off;
         gzip_static on;
-# to serve pre-gzipped version
         expires max;
-        add_header Cache-Control public;
-        add_header Last-Modified "";
-        add_header ETag "";
+        proxy_hide_header ETag;
+        add_header ETag $uri;
         break;
     }
     location / {
         return 301 https://www.alegreme.com$request_uri;
     }
     location @rails {
+        proxy_no_cache $cookie_remember_user_token;
+        proxy_cache_bypass $cookie_remember_user_token;
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
+        proxy_cache_lock on;
         proxy_pass http://rails_app;
     }
 }
