Adjust in dockerfile

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -105,8 +105,8 @@ RUN bundle update --bundler
 ADD . $RAILS_ROOT
 
 
-RUN rake assets:clobber
-RUN rake webpacker:clobber
+RUN bundle exec rake assets:clobber
+RUN bundle exec rake webpacker:clobber
 RUN rake assets:precompile
 RUN rake webpacker:compile
 RUN yarn install
