--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -14,6 +14,7 @@ server {
     client_body_timeout 10;
     send_timeout 2;
     keepalive_timeout 30;
+    gzip on;
 
     location ^~ /.well-known {
         root /var/www/certbot;
@@ -61,6 +62,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    gzip on;
 
     reset_timedout_connection on;
     client_body_timeout 10;
