--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,13 +1,14 @@
 version: '2.3'
 volumes:
   bundle_cache: {}
-  # scrapy_shared:
   db_data:
   db_backup:
   api_data:
-  # search_data:
   scrapydo_data:
   splash_data:
+  redis_data:
+  # scrapy_shared:
+  # search_data:
 services:
   app:
     build:
@@ -16,47 +17,65 @@ services:
     depends_on:
       - db
       - api
+      - memcached
+      - scrapy
+      - redis
       # - search
       # - bot
-      - scrapy
     volumes:
       - bundle_cache:/bundle
       - ./scrapy/data:/var/www/scrapy/data
       - ./web:/var/www/alegreme
-      # - ./web/app:/var/www/alegreme/app
-      # - ./web/config:/var/www/alegreme/config
-      # - ./web/lib:/var/www/alegreme/lib
-      # - ./web/public/uploads:/var/www/alegreme/public/uploads
-      # - ./web/db/backups:/var/www/alegreme/db/backups
-      # - ./web/test:/var/www/alegreme/test
       - ./storage:/var/www/alegreme/storage
       - ./logs/app:/var/www/alegreme/log
-      # - ./web/scrapy:/var/www/scrapy/data/scraped
     environment:
       RAILS_ENV: development
       RACK_ENV: development
       RAILS_SERVE_STATIC_FILES: 'false'
       PGHOST: db
       PGUSER: postgres
-      # AWS_ACCESS_KEY_ID: REMOVED
-      # AWS_SECRET_ACCESS_KEY: REMOVED
-      # AWS_BUCKET: alegreme-event-cover
       API_URL: http://api
-      # ELASTICSEARCH_URL: http://search:9200
       IS_DOCKER: 'true'
       HTTP_HOST: 'www.alegreme.com'
       NODE_ENV: development
-    links:
-      # - api
-      - db
-      # - search
+      JOB_WORKER_URL: redis://redis:6379/0
+      # ELASTICSEARCH_URL: http://search:9200
     restart: always
     ports:
       - 3000:3000
     stdin_open: true
     tty: true
     command: bundle exec puma -C config/puma/puma-development.rb
-    mem_limit: 6048000000
+    mem_limit: 6gb
+    memswap_limit: 6gb
+    mem_reservation: 256m
+    cpus: 0.5
+  sidekiq:
+    build:
+      context: ./web
+      dockerfile: ./docker/sidekiq/Dockerfile
+    depends_on:
+      - redis
+      - db
+    volumes:
+      - ./web:/var/www/alegreme
+      - ./logs/sidekiq:/var/www/alegreme/log
+    working_dir: /var/www/alegreme
+    environment:
+      RAILS_ENV: development
+      RACK_ENV: development
+      PGHOST: db
+      PGUSER: postgres
+      API_URL: http://api
+      IS_DOCKER: 'true'
+      HTTP_HOST: 'www.alegreme.com'
+      NODE_ENV: development
+      JOB_WORKER_URL: redis://redis:6379/0
+    command: bundle exec sidekiq -C /var/www/sidekiq/config.yml -r /var/www/alegreme
+    restart: always
+    mem_limit: 3gb
+    memswap_limit: 3gb
+    cpus: 0.5
   db:
     image: postgres
     volumes:
@@ -70,25 +89,9 @@ services:
     ports:
       - 5432:5432
     restart: always
-    mem_limit: 2048000000
-  # web:
-  #   build:
-  #     context: ./web
-  #     dockerfile: ./docker/web/Dockerfile
-  #   depends_on:
-  #     - app
-  #   ports:
-  #     - 80:80
-  #     - 443:443
-  #   volumes:
-  #     - ./data/certbot/conf:/etc/letsencrypt
-  #     - ./data/certbot/www:/var/www/certbot
-  #   restart: always
-  # certbot:
-  #   image: certbot/certbot
-  #   volumes:
-  #     - ./data/certbot/conf:/etc/letsencrypt
-  #     - ./data/certbot/www:/var/www/certbot
+    mem_limit: 2gb
+    memswap_limit: 3gb
+    cpus: 0.5
   api:
     build:
       context: ./ml
@@ -102,18 +105,10 @@ services:
       - ./logs/api:/var/www/ml/api/log
     environment:
       IS_DOCKER: 'true'
-    mem_limit: 2048000000
-  # search:
-  #   build:
-  #     context: ./search
-  #     dockerfile: ./Dockerfile
-  #   environment:
-  #     discovery.type: single-node
-  #   ports:
-  #     - "9200:9200"
-  #   volumes:
-  #     - search_data:/var/www/search/data
-  #   restart: always
+    mem_limit: 3gb
+    memswap_limit: 4gb
+    mem_reservation: 256m
+    cpus: 0.7
   scrapy:
     build:
       context: ./scrapy
@@ -121,28 +116,81 @@ services:
     environment:
         SPLASH_URL: http://splash:8050
         IS_DOCKER: 'true'
-        # PRIVATE_IP: '172.26.14.59'
-        # PUBLIC_IP: '3.209.95.87'
     depends_on:
       - splash
     volumes:
-      # - ./scrapy/classified:/var/www/scrapy/data/classified
-      # - ./scrapy/scraped:/var/www/scrapy/data/scraped
       - ./scrapy/alegreme:/var/www/scrapy/alegreme
       - ./scrapy/data:/var/www/scrapy/data
       - scrapydo_data:/var/www/scrapy/projects
     ports:
       - "7654:7654"
     restart: always
-    mem_limit: 4048000000
+    mem_limit: 3gb
+    memswap_limit: 4gb
+    cpus: 0.5
     command: scrapy-do --nodaemon --pidfile= scrapy-do --config scrapydo.conf
   splash:
     image: scrapinghub/splash
     ports:
-      - "8050:8050"
-      - "5023:5023"
+      - 8050:8050
+      - 5023:5023
     restart: always
     volumes:
       - splash_data:/var/www/splash/data
-    mem_limit: 3048000000
-    command: --maxrss 3048 --max-timeout 300 --disable-lua-sandbox
+    mem_limit: 5gb
+    memswap_limit: 5gb
+    mem_reservation: 256m
+    cpus: 0.7
+    command: --maxrss 4048 --max-timeout 300 --disable-lua-sandbox
+  memcached:
+    image: memcached
+    command: memcached -m 64
+    ports:
+      - 11211:11211
+    restart: always
+    mem_limit: 3gb
+    memswap_limit: 3gb
+    mem_reservation: 256m
+    cpus: 0.3
+    restart: always
+  redis:
+    image: redis
+    command: redis-server
+    volumes:
+      - redis_data:/data
+    ports:
+      - 6379:6379
+    mem_limit: 3gb
+    memswap_limit: 3gb
+    mem_reservation: 256m
+    cpus: 0.3
+    restart: always
+# web:
+#   build:
+#     context: ./web
+#     dockerfile: ./docker/web/Dockerfile
+#   depends_on:
+#     - app
+#   ports:
+#     - 80:80
+#     - 443:443
+#   volumes:
+#     - ./data/certbot/conf:/etc/letsencrypt
+#     - ./data/certbot/www:/var/www/certbot
+#   restart: always
+# certbot:
+#   image: certbot/certbot
+#   volumes:
+#     - ./data/certbot/conf:/etc/letsencrypt
+#     - ./data/certbot/www:/var/www/certbot
+# search:
+#   build:
+#     context: ./search
+#     dockerfile: ./Dockerfile
+#   environment:
+#     discovery.type: single-node
+#   ports:
+#     - "9200:9200"
+#   volumes:
+#     - search_data:/var/www/search/data
+#   restart: always
