--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -46,10 +46,10 @@ services:
     stdin_open: true
     tty: true
     command: bundle exec puma -C config/puma/puma-development.rb
-    mem_limit: 6gb
-    memswap_limit: 6gb
-    mem_reservation: 256m
-    cpus: 0.5
+#    mem_limit: 6gb
+#    memswap_limit: 6gb
+#    mem_reservation: 256m
+#    cpus: 0.5
 #  sidekiq:
 #    build:
 #      context: ./web
@@ -89,9 +89,9 @@ services:
     ports:
       - 5432:5432
     restart: always
-    mem_limit: 2gb
-    memswap_limit: 3gb
-    cpus: 0.5
+#    mem_limit: 2gb
+#    memswap_limit: 3gb
+#    cpus: 0.5
   api:
     build:
       context: ./ml
@@ -105,10 +105,10 @@ services:
       - ./logs/api:/var/www/ml/api/log
     environment:
       IS_DOCKER: 'true'
-    mem_limit: 3gb
-    memswap_limit: 4gb
-    mem_reservation: 256m
-    cpus: 0.7
+#    mem_limit: 3gb
+#    memswap_limit: 4gb
+#    mem_reservation: 256m
+#    cpus: 0.7
   scrapy:
     build:
       context: ./scrapy
@@ -125,9 +125,9 @@ services:
     ports:
       - "7654:7654"
     restart: always
-    mem_limit: 3gb
-    memswap_limit: 4gb
-    cpus: 0.5
+#    mem_limit: 3gb
+#    memswap_limit: 4gb
+#    cpus: 0.5
     command: scrapy-do --nodaemon --pidfile= scrapy-do --config scrapydo.conf
   splash:
     image: scrapinghub/splash
@@ -137,10 +137,10 @@ services:
     restart: always
     volumes:
       - splash_data:/var/www/splash/data
-    mem_limit: 5gb
-    memswap_limit: 5gb
-    mem_reservation: 256m
-    cpus: 0.7
+#    mem_limit: 5gb
+#    memswap_limit: 5gb
+#    mem_reservation: 256m
+#    cpus: 0.7
     command: --maxrss 4048 --max-timeout 300 --disable-lua-sandbox
 #  memcached:
 #    image: memcached
