--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       IS_DOCKER: 'true'
       HTTP_HOST: 'www.alegreme.com'
       NODE_ENV: production
-      WEB_CONCURRENCY: 2
+      WEB_CONCURRENCY: 4
       RAILS_MAX_THREADS: 6
       JOB_WORKER_URL: redis://redis:6379/0
       # ELASTICSEARCH_URL: http://search:9200
@@ -45,10 +45,10 @@ services:
     ports:
       - 3000:3000
     command: bundle exec puma -C config/puma.rb
-    mem_limit: 4gb
-    memswap_limit: 5gb
+    mem_limit: 6gb
+    memswap_limit: 6gb
     mem_reservation: 256m
-    cpu_percent: 75
+    cpus: 3.5
   sidekiq:
     build:
       context: ./web
@@ -76,25 +76,25 @@ services:
     restart: always
     mem_limit: 3gb
     memswap_limit: 3gb
-    cpus: 0.5
+    cpus: 2
   db:
     image: postgres:10
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: jon
       POSTGRES_PASSWORD: password
       POSTGRES_DB: production
       TZ: 'America/Sao_Paulo'
       PGTZ: 'America/Sao_Paulo'
-      PRIVATE_IP: '172.26.7.70'
-      PUBLIC_IP: '3.223.33.161'
+      PRIVATE_IP: '10.136.227.110'
+      PUBLIC_IP: '159.89.84.18'
     ports:
       - 5432:5432
     restart: always
     mem_limit: 2gb
     memswap_limit: 3gb
-    cpus: 0.5
+    cpus: 2
   web:
     build:
       context: ./web
@@ -111,7 +111,7 @@ services:
     restart: always
     mem_limit: 2gb
     memswap_limit: 3gb
-    cpu_percent: 50
+    cpus: 2
   certbot:
     image: certbot/certbot
     volumes:
@@ -129,10 +129,10 @@ services:
       - ./logs/api:/var/www/ml/api/log
     environment:
       IS_DOCKER: 'true'
-    mem_limit: 3gb
+    mem_limit: 4gb
     memswap_limit: 4gb
     mem_reservation: 256m
-    cpus: 0.7
+    cpus: 3
   scrapy:
     build:
       context: ./scrapy
@@ -140,8 +140,8 @@ services:
     environment:
       SPLASH_URL: http://splash:8050
       IS_DOCKER: 'true'
-      PRIVATE_IP: '172.26.7.70'
-      PUBLIC_IP: '3.223.33.161'
+      PRIVATE_IP: '10.136.227.110'
+      PUBLIC_IP: '159.89.84.18'
     depends_on:
       - splash
     volumes:
@@ -153,7 +153,7 @@ services:
     command: scrapy-do --nodaemon --pidfile= scrapy-do --config scrapydo.conf
     mem_limit: 3gb
     memswap_limit: 4gb
-    cpus: 0.5
+    cpus: 2
   splash:
     image: scrapinghub/splash
     ports:
@@ -165,7 +165,7 @@ services:
     mem_limit: 5gb
     memswap_limit: 5gb
     mem_reservation: 256m
-    cpus: 0.7
+    cpus: 2
     command: --maxrss 4048 --max-timeout 300 --disable-lua-sandbox
   memcached:
     image: memcached
@@ -176,7 +176,7 @@ services:
     mem_limit: 3gb
     memswap_limit: 3gb
     mem_reservation: 256m
-    cpus: 0.3
+    cpus: 2
     restart: always
   redis:
     image: redis
@@ -188,7 +188,7 @@ services:
     mem_limit: 3gb
     memswap_limit: 3gb
     mem_reservation: 256m
-    cpus: 0.3
+    cpus: 2
     restart: always
   # search:
   #   build:
