Add password to redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,7 +180,9 @@ services:
     restart: always
   redis:
     image: redis
-    command: redis-server
+    environment:
+      REDIS_PASSWORD: password
+    command: redis-server --appendonly yes --requirepass password
     volumes:
       - redis_data:/data
     ports:
