--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,12 +1,10 @@
 FROM ruby:2.6.3
 
-
 RUN apt-get update && apt-get install -y locales locales-all
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
-
 
 ENV TZ "America/Sao_Paulo"
 RUN echo $TZ > /etc/timezone && \
@@ -20,7 +18,6 @@ RUN echo $TZ > /etc/timezone && \
 #     RUBY_VERSION="2.6.1" \
 #     DB_PACKAGES="libsqlite3-dev" \
 #     RUBY_PACKAGES="ruby2.6.1 ruby2.6.1-dev"
-
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
       nano \
@@ -52,15 +49,12 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 RUN rm -fr /usr/local/bin/bundle
 RUN gem install --no-document bundler
 
-
 RUN apt-get update && curl --silent --location https://deb.nodesource.com/setup_10.x | bash - && apt-get install -y nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
 # RUN apt-get update && apt-get install -y libsqlite3-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
-
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update && apt-get install yarn
-
 
 # INSTALL POSTGRES 11
 RUN apt-get install -y wget \
@@ -76,40 +70,34 @@ RUN apt-get update && apt-get install -y postgresql-client-10
 # ENV RAILS_VERSION 5.2.1
 # RUN gem install rails --version "$RAILS_VERSION"
 
-
 ENV RAILS_ROOT /var/www/alegreme
 RUN mkdir -p $RAILS_ROOT
 
-
 WORKDIR $RAILS_ROOT
-
 
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
-
 
 ENV BUNDLE_PATH=/bundle \
     BUNDLE_BIN=/bundle/bin \
     GEM_HOME=/bundle
 ENV PATH="${BUNDLE_BIN}:${PATH}"
 
-
 COPY Gemfile Gemfile
-
 
 RUN bundle install --jobs 20 --retry 5
 RUN bundle update --bundler
 
-
 ADD . $RAILS_ROOT
 
-
-RUN bundle exec rake assets:clobber
-RUN bundle exec rake webpacker:clobber
+RUN rake assets:clobber
+RUN rake webpacker:clobber
 RUN rake assets:precompile
 RUN rake webpacker:compile
 RUN yarn install
+
+RUN rake sitemaps:refresh
 
 EXPOSE 3000
 
