--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,4 +1,4 @@
-proxy_cache_path $RAILS_ROOT/cache/nginx-rails levels= keys_zone=rails_cache:10m max_size=10g use_temp_path=off inactive=120m;
+proxy_cache_path $RAILS_ROOT/cache/nginx-rails levels=1:2 keys_zone=rails_cache:10m max_size=10g use_temp_path=off inactive=60m;
 
 upstream rails_app {
     server app:3000;
@@ -49,6 +49,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
+        proxy_cache rails_cache;
+        proxy_cache_revalidate on;
+        proxy_cache_min_uses 1;
+        proxy_cache_background_update on;
         proxy_cache_lock on;
         proxy_pass http://rails_app;
     }
