--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,8 @@
     "@material/card": "^0.43.0",
     "@rails/webpacker": "https://github.com/rails/webpacker",
     "botkit": "^0.7.0",
+    "botui": "^0.3.9",
+    "conversational-form": "^1.0.1",
     "default-passive-events": "^1.0.10",
     "expose-loader": "^0.7.5",
     "flipping": "^1.1.0",
