--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "morphdom": "^2.5.4",
     "nanoevents": "^2.0.0",
     "postal": "^2.0.5",
+    "pwa-install-prompt": "^1.1.0",
     "query-string": "^6.4.2",
     "rellax": "^1.10.0",
     "scrollbooster": "^1.1.0",
@@ -25,6 +26,7 @@
     "unpoly": "^0.60.3"
   },
   "devDependencies": {
+    "hint": "^5.3.1",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-server": "^3.1.14"
   }
