Adjust favicon in welcome and application pages

--- a/web/config/meta.yml
+++ b/web/config/meta.yml
@@ -1,4 +1,4 @@
 meta_title: "Alegreme - Aproveite a cidade de Porto Alegre"
 meta_description: "Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana... Um feed para quem quer explorar a cidade e não perder o que já conhece"
-meta_image: "welcome/social-banner.jpg" # Une image dans votre dossier app/assets/images/
+meta_image: "welcome/social-banner.jpg"
 twitter_account: "@portoalegreme"
