--- a/web/Gemfile
+++ b/web/Gemfile
@@ -24,6 +24,9 @@ gem 'materialize-sass', '~> 1.0.0'
 
 gem 'friendly_id', '~> 5.2.4'
 
+# Push Notifications
+gem 'rpush'
+
 
 # Devise
 gem 'devise'
