Migrate cron tasker to ofelia, remove scrapy-do

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -18,7 +18,7 @@ services:
       - db
       - api
       - scrapy
-      - search
+      # - search
       # - memcached
       # - redis
       # - bot
@@ -185,12 +185,20 @@ services:
 #   volumes:
 #     - ./data/certbot/conf:/etc/letsencrypt
 #     - ./data/certbot/www:/var/www/certbot
-  search:
-    build:
-      context: ./search
-      dockerfile: ./Dockerfile
-    environment:
-      discovery.type: single-node
-    ports:
-      - "9200:9200"
+  # search:
+  #   build:
+  #     context: ./search
+  #     dockerfile: ./Dockerfile
+  #   environment:
+  #     discovery.type: single-node
+  #   ports:
+  #     - "9200:9200"
+  #   restart: always
+  ofelia:
+    image: 'mcuadros/ofelia:latest'
+    volumes:
+      - ./ofelia/conf/config.ini:/etc/ofelia/config.ini
+      - /home/centos/.docker/config.json:/root/.docker/config.json
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./logs/ofelia:/tmp/logs
     restart: always
