Update populate task to work with ofelia

--- a/ofelia/conf/config.ini
+++ b/ofelia/conf/config.ini
@@ -1,15 +1,14 @@
-[job-run "job-scrapy-facebook"]
-schedule = @every 1h
-image = alegreme_scrapy
-command = scrapy crawl event -s JOBDIR=crawls/event-1
+[job-local "job-scrapy-facebook"]
+schedule = @every 2h
+command = docker-compose run --rm scrapy scrapy crawl event -s JOBDIR=crawls/event-1
 save-folder = /tmp/logs/scrapy
 
+[job-local "job-restart-splash"]
+schedule = @every 1h
+command = docker-compose restart splash
+
 [job-exec "job-populate-scrapped-events"]
-schedule = @every 6h
+schedule = @every 1h
 container = alegreme_app_1
 command = rake populate:facebook similar:events suggestions:users sitemap:refresh search:refresh
 save-folder = /tmp/logs/populate
-
-[job-local "job-restart-splash"]
-schedule = @every 3h
-command = docker-compose restart splash
