--- a/web/Gemfile
+++ b/web/Gemfile
@@ -148,6 +148,7 @@ group :development do
   gem 'awesome_print', require: 'ap'
   gem 'meta_request'
   gem 'niceql'
+  gem 'timecop'
   # gem 'bullet'
 end
 
