Add meta attrs for srapy movies

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -117,6 +117,7 @@ services:
     environment:
         SPLASH_URL: http://splash:8050
         IS_DOCKER: 'true'
+        ENV: 'development'
     depends_on:
       - splash
     volumes:
