Create top bar for movies and events

--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,11 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@material/card": "^0.43.0",
+    "@material/button": "^4.0.0",
+    "@material/card": "^4.0.0",
+    "@material/icon-button": "^4.0.0",
+    "@material/tab-bar": "^4.0.0",
+    "@material/tab-scroller": "^4.0.0",
     "@rails/webpacker": "https://github.com/rails/webpacker",
     "botkit": "^0.7.0",
     "botui": "^0.3.9",
@@ -14,7 +18,7 @@
     "flipping": "^1.1.0",
     "lazysizes": "^5.1.0",
     "lit-html": "^0.14.0",
-    "material-components-web": "^0.43.0",
+    "material-components-web": "^4.0.0",
     "mobile-detect": "^1.4.3",
     "morphdom": "^2.5.4",
     "nanoevents": "^2.0.0",
